@startuml

title __STRUCT's Class Diagram__\n

  package com.bupt.colorfulroute {
    package com.bupt.colorfulroute.runningapp.struct {
      class HistoryItem {
          - StartTime : String
          - RouteLengthText : String
          + HistoryItem()
          + getStartTime()
          + setStartTime()
          + getRouteLengthText()
          + setRouteLengthText()
      }
    }
  }
  

  package com.bupt.colorfulroute {
    package com.bupt.colorfulroute.runningapp.struct {
      class RouteData {
          + keyPoints : ArrayList<LatLng>
          + ployPoints : ArrayList<LatLng>
          + centerPoint : LatLng
          + length : double
          + realLength : double
      }
    }
  }
  

  package com.bupt.colorfulroute {
    package com.bupt.colorfulroute.runningapp.struct {
      class RunningData {
          + keyPoints : ArrayList<LatLng>
          + ployPoints : ArrayList<LatLng>
          + centerPoint : LatLng
          + length : double
          + startTime : long
          + endTime : long
          + time : long
          + calorie : long
      }
    }
  }
  

  RouteData -up-|> Serializable
  RunningData -up-|> Serializable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
